config/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-deploy
spec:
  replicas: 2
  minReadySeconds: 10 # Ensure pods healthy for 10 secs before taking down the next pod
  strategy:
    type: RollingUpdate
    rollingUpdate: # Take 1 down at a time
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-pod
        image: nigelpoulton/pluralsight-docker-ci:latest
        ports:
        - containerPort: 8080
