config/env-vars-from-secret.yml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-pod
spec:
  containers:
    - name: redis
      image: redis
  restartPolicy: Never
