config/pod-with-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - name: event-simulator
      image: kodekloud/event-simulator
      volumeMounts:
        - name: log-volume
          mountPath: /log 
        - name: vol-lives-on-pod
          mountPath: /tmp
  volumes:
    - name: log-volume
      hostPath:
        # directory location on host
        path: /var/log/webapp
        # this field is optional
        type: Directorymaster
    - name: vol-lives-on-pod
      emptyDir: {}
