config/pod.yml
# k run hello-pod --image=nginx --command "sleep 3600"
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
spec:
  containers:
  - name: hello-container
    image: nginx
    ports:
    - containerPort: 8080
    command: ["sleep", "$DURATION"]
