config/service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector: # Copy labels from pod pod.metadata.labels
    app: myapp
    type: back-end
