config/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: NodePort
  ports:
    - nodePort: 30000
      port: 80
      targetPort: 80
  selector: # Copy labels from pod pod.metadata.labels
    - app: myapp
      type: front-end
