config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-world
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30001 # The shared port of all pods
    protocol: TCP
  selector:
    app: hello-world
